src/components/lessonPageTypes/BuildResponse.css
.build-question-test {
  display: flex;
  flex-direction: column;
  height: 75%;
  flex-wrap: nowrap;
  justify-content: space-between;
}

.build-answer {
  height: 160px;
  width: 100%;
  padding: 0 10px;
  display: flex;
  align-items: end;
  flex-wrap: wrap;
  align-content: end;
  margin-top: 0;
}
.build-answer-buttons {
  overflow-x: scroll;
  overflow-y: hidden;
  white-space: nowrap;
  height: 70px;
}
.choices {
  flex-shrink: 0;
  top: 150px;
}
.underline {
  background-color: var(--ion-color-medium);
  height: 2px;
  width: 100%;
  flex-shrink: 0;
}
.hidden {
  display: none;
}

.add-space-container {
  /* Add margin to ensure it will always be at the bottom of the page */
  flex: 1;
  min-height: 60px;
  position: relative;
}

.add-space {
  position: absolute;
  bottom: 0;
  left: 5px;
  right: 5px;
}

.build-question-rich-display {
  padding-top: 0;
  padding-bottom: 0;
  margin-top: 15px;
  margin-bottom: 10px;
}

